# Wobbly

./: .gitignore  Makefile.am  meson.build
.github/workflows/: macos.yml  windows.yml
msvc/: Wobbly.sln
src/shared/: WobblyProject.cpp  WobblyShared.cpp
src/wibbly/: WibblyJob.cpp
src/wobbly/: WobblyWindow.cpp
